Add test, add PostgreSQL support, add Docker

--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,13 @@
 DEBUG=<True>
 PRODUCTION=<False>
-DJANGO_SECRET=your-secret-key
 
-POSTGRES_PASSWORD=your-postgres-password
-POSTGRES_USER=your-postgres-user
-POSTGRES_DB=your-postgres-db
-POSTGRES_HOST=your-postgres-host
+DJANGO_SECRET=secret-key
+
+POSTGRES_PASSWORD=postgres-password
+POSTGRES_USER=postgres-user
+POSTGRES_DB=db
+POSTGRES_HOST=postgres-host
 POSTGRES_PORT=5432
-PGDATA=your-postgres-path-for-loading-data
+PGDATA=postgres-path-to-data
 
-# include this only for running tests
 DJANGO_SETTINGS_MODULE=airport_service.settings
